--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,6 +92,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <FrameLayout
+                android:id="@+id/container_statuses"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -99,7 +100,10 @@
 
             </FrameLayout>
 
+
         </android.support.v4.widget.NestedScrollView>
+
+
 
         <com.codez.collar.ui.ExpendButton
             android:id="@+id/btn_add"
