--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorPrimaryDark_night">@color/colorPrimary_night</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="colorToolbarBg">#ffffff</color>
+    <color name="colorToolbarBg">@color/colorPrimary</color>
     <color name="colorToolbarBg_night">#262626</color>
 
     <color name="colorBgNormal">#eeeeee</color>
