--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -57,7 +57,7 @@
                         android:layout_height="60dp"
                         android:layout_below="@id/iv_cover"
                         android:layout_marginTop="-30dp"
-                        android:imageUrl="@{user.profile_image_url}"
+                        android:imageUrl="@{user.avatar_large}"
                         android:src="@drawable/pic_head_test"
                         android:layout_marginLeft="@dimen/fab_margin"
                         android:layout_gravity="bottom"
@@ -89,7 +89,7 @@
                             android:textStyle="bold"
                             android:textColor="@color/colorTextLevel1"
                             android:textSize="18sp"
-                            android:text="萌鼠喝酸奶"/>
+                            android:text="@{user.screen_name}"/>
                         <ImageView
                             android:id="@+id/iv_gender"
                             android:layout_width="16dp"
@@ -222,23 +222,22 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_user_follow"
-            android:id="@+id/btn_modify"
-            android:layout_gravity="bottom|right"
-            app:backgroundTint="@color/colorHighlight"
-            app:fabSize="normal" />
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_margin="16dp"-->
+            <!--android:src="@drawable/ic_user_follow"-->
+            <!--android:id="@+id/btn_modify"-->
+            <!--android:layout_gravity="bottom|right"-->
+            <!--app:backgroundTint="@color/colorHighlight"-->
+            <!--app:fabSize="normal" />-->
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorBgNormal"
-            android:fillViewport="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
-            <android.support.v4.view.ViewPager
+            <com.codez.collar.ui.CustomViewPager
                 android:id="@+id/viewPager"
                 android:background="@color/colorItemNormal"
                 android:layout_width="match_parent"
