1、完成微博item的图片以及转发显示，现存在转发微博内容中的图片无法显示的问题 2、实现微博item中的图片的点击放大浏览，后序将加上图片的左右滑动浏览

--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -9,13 +9,15 @@
     </data>
     <LinearLayout
         android:id="@+id/ll_root"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
+            android:id="@+id/iv_pic"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
             android:background="#fff"
             android:albumUrl="@{bean.thumbnail_pic}"
+            android:definition="@{`bmiddle`}"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"/>
     </LinearLayout>
