--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,6 +2,12 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="user"
+            type="com.codez.collar.bean.UserBean"/>
+    </data>
     <LinearLayout
 
         android:layout_width="match_parent"
@@ -55,6 +61,7 @@
             android:background="@color/colorBgNormal"
             android:orientation="vertical">
             <RelativeLayout
+                android:id="@+id/rl_header"
                 android:layout_width="match_parent"
                 android:layout_height="86dp"
                 android:background="@color/colorItemNormal">
@@ -66,27 +73,37 @@
                     android:layout_marginTop="@dimen/fab_margin"
                     android:src="@drawable/pic_head_test"/>
                 <LinearLayout
+                    android:id="@+id/ll_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/iv_head"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginRight="@dimen/fab_margin"
                     android:layout_centerVertical="true"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="萌鼠喝酸奶"
+                        android:text="@{user.screen_name}"
                         android:textSize="16sp"
                         android:textColor="@color/colorTextLevel1" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="简介:黑"
+                        android:maxLines="1"
+                        android:text="@{`简介：`+user.description}"
                         android:textSize="12sp"
                         android:textColor="@color/colorTextLevel2" />
 
                 </LinearLayout>
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/ll_info"
+                    android:layout_marginRight="@dimen/fab_margin"
+                    android:src="@drawable/ic_weibo_arrow_gray_right" />
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -105,7 +122,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="628"
+                        android:text="@{``+user.statuses_count}"
                         android:textSize="14sp"
                         android:textColor="@color/colorTextLevel1"/>
                     <TextView
@@ -124,7 +141,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="628"
+                        android:text="@{``+user.friends_count}"
                         android:textSize="14sp"
                         android:textColor="@color/colorTextLevel1"/>
                     <TextView
@@ -143,7 +160,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="35"
+                        android:text="@{``+user.followers_count}"
                         android:textSize="14sp"
                         android:textColor="@color/colorTextLevel1"/>
                     <TextView
