--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="user"
-            type="com.codez.collar.bean.CommentBean" />
+            type="com.codez.collar.bean.UserBean" />
     </data>
 <RelativeLayout
     android:id="@+id/ll_root"
