1、增加账号管理页面，实现账号管理模块 2、解决了安卓6.0动态权限的申请问题，将权限的判断及请求统一放置到BaseActivity中 3、优化了登录登出过程中的token保存，activity销毁等相关处理，但任存在一些问题，需后续解决

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -2,14 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
 
-    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBgNormal"
         android:orientation="vertical">
+
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -20,32 +19,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="@color/colorPrimary"
-                app:contentInsetStart="0dp"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:titleTextAppearance="@style/Toolbar.TitleText" />
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
 
-        </android.support.v7.widget.RecyclerView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@color/colorItemNormal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <Button
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="center_vertical"
-                android:background="@color/colorHighlight"
-                android:layout_marginLeft="@dimen/fab_margin"
-                android:layout_marginRight="@dimen/fab_margin"
-                android:text="退出账号"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+            </android.support.v7.widget.RecyclerView>
+            <Button
+                android:id="@+id/btn_logout"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="@dimen/fab_margin"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="@dimen/fab_margin"
+                android:background="@drawable/btn_commit"
+                android:text="退出登录"
                 android:textColor="#fff"
-                android:textSize="16sp"/>
+                android:textSize="18sp"/>
         </LinearLayout>
     </LinearLayout>
 </layout>
