--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -82,6 +82,7 @@
                     android:layout_centerVertical="true"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/tv_sreen_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{user.screen_name}"
