--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -35,13 +35,13 @@
             <RelativeLayout
                 android:id="@+id/rl_account"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@color/colorItemNormal"
+                android:layout_height="60dp"
+                android:background="@drawable/layout_item"
                 android:paddingLeft="@dimen/fab_margin"
                 android:paddingRight="@dimen/fab_margin"
                 android:layout_marginTop="@dimen/fab_margin">
                 <TextView
-                    android:id="@+id/tv_name"
+                    android:id="@+id/tv_screen_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -59,12 +59,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="46dp"
+                    android:layout_marginRight="34dp"
                     android:layout_centerVertical="true"
-                    android:text="name"
-                    android:textSize="16sp"
+                    android:text=""
+                    android:textSize="14sp"
                     android:textColor="@color/colorTextLevel3"/>
             </RelativeLayout>
+
         </LinearLayout>
     </LinearLayout>
 </layout>
